2006-04-26 Silke Reimer <Silke.Reimer@intevation.de>

	* tools/geos-config.in: fixed library path
	to use layout detected by autoconf

2006-04-22 Mateusz Loskot <mateusz@loskot.net>

	* source/simplify/TopologyPreservingSimplifier.cpp:
	helper classes ctors made public (Bug #100)

2006-04-21 Sandro Santilli <strk@refractions.net>

	* source/geom/PrecisionModel.cpp: fixed
	constructor by type to always initialize scale

2006-04-20 Sandro Santilli <strk@refractions.net>

	* headers/geos/geom/BinaryOp.h: added debugging
	output.
	* geos::algorithm::HCoordinate: switched to
	use of 'long double' types for improved precision.
	added compile time define to force storage of
	intermediate computation values to variables (in
	order to make the -ffloat-store gcc switch effective).
	* source/headers/geos/algorithm/LineIntersector.h:
	added some doxygen comments.

2006-04-14 Sandro Santilli <strk@refractions.net>

	* capi/geos_c.cpp: binary ops invoked using the
	new BinaryOp template function.
	* source/operation/overlay/OverlayOp.cpp: removed
	precision reduction code (use BinaryOp for that)
	* tests/xmltester/XMLTester.cpp: binary ops
	invoked using the new BinaryOp template function.
	* source/headers/geos/geom/BinaryOp.h: new template
	function implementing various heuristics aimed at
	making binary geometry ops work around robustness issues.
	* source/headers/geos/operation/overlay/OverlayOp.h:
	added overlayOp() adapter to generalize use of
	OverlayOp::overlayOp()
	* algorithm::HCoordinate: added output operator
	and debugging blocks.

2006-04-13 Sandro Santilli <strk@refractions.net>

	* geos::precision::CommonBitsOp: fixed bug
	in binary ops failing to translate both operands
	consistently.
	* capi/ (geostest.c, geos_c.cpp, geos_h.in): added GEOSSimplify()
	and GEOSTopologyPreserveSimplify() interfaces.
	Removed compiler warnings. Had libgeos_c use default
	GeometryFactory instance.
	* geos/source/simplify/DouglasPeuckerSimplifier.cpp: